# Hybrid_Mapping_Cocalibration

./: .gitignore  CMakeLists.txt  RAL-Chart.drawio  ReadMe.md  gitPush.sh  package.xml
MI/: CMakeLists.txt  README  package.xml
MI/python_scripts/cost_plot/: CorrelationViz.py  RunCorrAnalysis.sh
MI/src/: Calibration.cpp  Calibration.h  main.cpp
calibration/: CMakeLists.txt  rec.txt
calibration/config/: calibration.yaml
calibration/include/: FisheyeProcess.h  LidarProcess.h  Optimization.h  common_lib.h  define.h  fisheye_process.h  lidar_process.h  omni_process.h  optimization.h  spline.h  utils.h
calibration/launch/: auto_collection.sh  auto_run.launch  auto_rviz.launch  autorun.launch  calibration.launch  collection.launch  collection.sh  fast_lio.launch  ground.launch  lidar_sync.launch  lio_pose.launch  livox.rviz  livox_driver.launch  publish.launch  rviz.launch  rviz_pub.launch  segment.launch
calibration/python_scripts/: AutoRun.py  FisheyeCapture.py  GimbalPublisher.py  statistics_intensity.py
calibration/python_scripts/4dicp/: 4dicp.py
calibration/python_scripts/Camera/Data/: 041080420602.mvdat
calibration/python_scripts/analysis/: CorrelationViz.py  KdeViz.py  RunCorrAnalysis.sh  kde_visualize.py
calibration/python_scripts/auto_run/: AutoRun.py  DataCleaner.py  ExposureFusion.py  FastLIO.py  GimbalPublisher.py  Subprocess.py  Sync.py  auto_run.py  data_cleaner.py  fast_lio.py  lidar_sync.py  mvsdk.py  sync.py
calibration/python_scripts/cost_plot/: RunCorrAnalysis.sh  correlation_visualize.py
calibration/python_scripts/hog_filter/: cv_conv.py  image_process.py  imgProcess.py
calibration/python_scripts/image_process/: EdgeExtraction.py  HDRProcessing.py  RunEdge.sh  RunHDR.sh  cv_meanshift.py  edge.sh  edge_extraction.py  hdr.py  hdr_preprocessing.py  image_process.py
calibration/python_scripts/kde_viz/: CorrelationViz.py  KdeViz.py  RunCorrAnalysis.sh  camEdgePix.txt  camKDE.txt  kde_img.py  log.tar.xz  log_0.01+0.015.tar.xz  mlpack_kde_img.py  mlpack_kde_viz.py  scipy_kde.py  tx_result.txt  ty_result.txt  tz_result.txt
calibration/src/: FisheyeProcess.cpp  LidarProcess.cpp  MeanShift.cpp  Optimization.cpp  calibration.cpp  ceresMultiScenes.cpp  fisheye_process.cpp  fullview_icp.cpp  ground.cpp  icp.cpp  lidar_process.cpp  lio_pose.cpp  main.cpp  optimization.cpp  pairwise_incremental_registration.cpp  rvizPub.cpp  rviz_pub.cpp  segment.cpp  spot_registration.cpp
calibration/src/useless/: calibOpt.cpp
calibration/src/useless/ICP/: SAC_ICP.cpp  fullview_icp.cpp  icp.cpp  icpnl.cpp  pairwise_incremental_registration.cpp
cocalibration/: CMakeLists.txt  package.xml
cocalibration/config/: calibration.yaml  cocalibration.yaml
cocalibration/include/: common_lib.h  define.h  lidar_process.h  omni_process.h  optimization.h
cocalibration/launch/: calibration.launch  cocalibration.launch  publish.launch
cocalibration/python_scripts/image_process/: edge_extraction.py
cocalibration/src/: cocalibration.cpp  lidar_process.cpp  omni_process.cpp  optimization.cpp
fast_lio/: CMakeLists.txt  package.xml
fast_lio/config/: avia.yaml  mid360.yaml
fast_lio/launch/: mapping_mid360.launch
fast_lio/rviz_cfg/: loam_livox.rviz
fast_lio/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
gimbal/: CMakeLists.txt  package.xml
gimbal/include/: gimbal.h
gimbal/launch/: gimbal.launch  gimbal3.launch  gimbal4.launch  gimbal5.launch  gimbal6.launch  gimbal7.launch  gimbal8.launch  gimbal_manual.launch
gimbal/scripts/: gimbal_cmd_instruction(modified).py  gimbal_cmd_instruction.py
gimbal/src/: gimbal.cc  gimbal_control.cc
include/: FisheyeProcess.h  LidarProcess.h  MeanShift.h  common.h  edge.h  feature.h  imageProcess.h  lidarProcess.h
launch/: calibration.launch
pcd_view-master/: README.md  pcd_view.bash  pcd_view.launch  pcd_view.rviz
python_scripts/: cv_parameters.txt  cv_parameters_0613.txt  statistics_curvature.py
python_scripts/hog_filter/: cv_canny_contours.py  cv_conv.py  imgProcess.py
python_scripts/kde_viz/: lidEdgePix.txt  lidKDE.txt  mlpack_kde_img.py  mlpack_kde_viz.py
src/: FisheyeProcess.cpp  LidarProcess.cpp  calibOpt.cpp  ceresAutoDiff.cpp  ceresMultiScenes.cpp  feature.cpp  imagePoint.py  imageProcess.cpp  lidarProcess.cpp  livox_calib.cpp  main.cpp  rvizPub.cpp  visualization.cpp
